added resume page

--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -26,6 +26,10 @@
 	font-size: 15px;
 }
 
+.more-info {
+	font-size: 18px;
+}
+
 .projects-button > span,
 .more-info > div {
 	display: inline-block;
