--- a/app/views/resume.html
+++ b/app/views/resume.html
@@ -4,13 +4,13 @@
 		<hr />
 		<ul class="languages">
 			<li>Angular.js, JavaScript, jQuery, Underscore.js, lodash, HTML5, CSS3, Sass, Bootstrap, Yeoman, Bower, Grunt, Python, Git, Vi, Highcharts</li>
-			<li><span class="past-exp">PRIOR EXPERIENCE: </span>Node.js, Express.js, Mustache.js, Knockout.js, Jade, Flask, Django, Pygame, C, C++, Shell Scripting, mySQL, MongoDB, Mongoskin</li>
+			<li><span class="past-exp set-green">PRIOR EXPERIENCE: </span>Node.js, Express.js, Mustache.js, Knockout.js, Jade, Flask, Django, Pygame, C, C++, Shell Scripting, mySQL, MongoDB, Mongoskin</li>
 		</ul>
 	</article>
 	<div class="experience">
 		<h3>WORK EXPERIENCE</h3>
 		<hr />
-		<section class="ge">
+		<section class="ge job">
 			<div class="role">FRONT-END DEVELOPER</div>
 			<div class="company"><em>GE Software, September 2014 - June 2015</em></div>
 			<ul class="tasks">
@@ -19,7 +19,7 @@
 				<li>Implement an email-like case management application for users to interact, identify, and predict machine behaviors that can prolong its life and increase revenue by $7M/week.   </li>
 			</ul>
 		</section>
-		<section class="google">
+		<section class="google job">
 			<div class="role">TECHNICAL OPERATIONS LEAD</div>
 			<div class="company"><em>Google via Adecco, October 2012 - August 2014</em></div>
 			<ul class="tasks">
@@ -27,7 +27,7 @@
 				<li> Performed pose analysis on over 10,000 panoramic image data, geometry debug, and communicate with various teams ranging from 10-20 operators and project managers per location worldwide.</li>
 			</ul>
 		</section>
-		<section class="cisco">
+		<section class="cisco job">
 			<div class="role">SOFTWARE ENGINEER INTERN</div>
 			<div class="company"><em>Cisco Systems, June 2011 - July 2012</em></div>
 			<ul class="tasks">
@@ -39,18 +39,23 @@
 	<div class="education">
 		<h3>EDUCATION</h3>
 		<hr />
-		<div class="masters">
+		<div class="masters degree">
 			MASTERS DEGREE IN COMPUTER ENGINEERING AND NETWORK SYSTEMS
 		</div>
-		<div class="bachelors">
+		<div class="bachelors degree">
 			BACHELORS DEGREE IN COMPUTRE ENGINEERING
 		</div>
 		<div class="almamater">
 			<em>San Jose State University, San Jose, CA, Fall 2007 - May 2012</em>
 		</div>
 		<div class="coursework">
-			<span>Relevant Coursework: </span>
+			<span class="set-green">Relevant Coursework: </span>
 			Object Oriented Programming, Database, Data Structures & Algorithms, Operating Systems, Computer Networking Concepts, TCP/IP Socket Programming, Computer Architecture
 		</div>
 	</div>
+	<div class="more-info pointer">
+        <div>
+            <span>Download Resume</span>
+        </div>
+    </div>
 </div> 
