--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,31 @@
-<p>This is the about view.</p>
+<div id="about">
+	<div class="fun-facts">
+		<p class="title">Fun Facts</p>
+		<ol class="facts-list">
+			<li>Seven years after high school, I reunited with my high school sweetheart.</li>
+			<li>Five years later we got married.</li>
+			<li>One year after we had a beautiful daughter.</li>
+			<li>Two years after we have another one coming.</li>
+			<li>I love sports and dancing.</li>
+			<li>I enjoy coffee, beer, and whiskey in no particular order.</li>
+			<li>I love my mom's spaghetti.</li>
+			<li>I didn't know what I wanted to do until 28.</li>
+			<li>I cannot go longer than 2 days without meat.</li>
+			<li>I lvoe to exercise though my body doesn't show that.</li>
+		</ol>
+		<hr />
+		<div class="milestones"></div>
+		<div class="career-growth">
+			<p class="title">Companies</p>
+			<div class="company1">
+				GE Software
+			</div>
+			<div class="company1">
+				Google
+			</div>
+			<div class="company1">
+				Cisco Systems
+			</div>
+		</div>
+	</div>
+</div>
