--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,31 +1,45 @@
 <div id="about">
 	<div class="fun-facts">
-		<p class="title">Fun Facts</p>
-		<ol class="facts-list">
-			<li>Seven years after high school, I reunited with my high school sweetheart.</li>
-			<li>Five years later we got married.</li>
-			<li>One year after we had a beautiful daughter.</li>
-			<li>Two years after we have another one coming.</li>
-			<li>I love sports and dancing.</li>
-			<li>I enjoy coffee, beer, and whiskey in no particular order.</li>
-			<li>I love my mom's spaghetti.</li>
-			<li>I didn't know what I wanted to do until 28.</li>
-			<li>I cannot go longer than 2 days without meat.</li>
-			<li>I lvoe to exercise though my body doesn't show that.</li>
-		</ol>
-		<hr />
-		<div class="milestones"></div>
-		<div class="career-growth">
-			<p class="title">Companies</p>
-			<div class="company1">
-				GE Software
-			</div>
-			<div class="company1">
-				Google
-			</div>
-			<div class="company1">
-				Cisco Systems
-			</div>
+		<h3 class="title">Fun Facts</h3>
+		<div class="facts-list">
+			<ol>
+				<li>Seven years after high school, I reunited with my high school sweetheart.</li>
+				<li>Five years later we got married.</li>
+				<li>One year after we had a beautiful daughter.</li>
+				<li>Two years after we have another one coming.</li>
+				<li>I love sports and dancing.</li>
+				<li>I enjoy coffee, beer, and whiskey in no particular order.</li>
+				<li>I love my mom's spaghetti.</li>
+				<li>I didn't know what I wanted to do until 28.</li>
+				<li>I cannot go longer than 2 days without meat.</li>
+				<li>I lvoe to exercise though my body doesn't show that.</li>
+			</ol>
+		</div>
+	</div>
+	<hr />
+    <milestones-timeline></milestones-timeline>
+	<div class="career-growth">
+		<h3 class="title">Companies</h3>
+		<div class="company one">
+			<p class="title"><strong>GE Software</strong></p>
+			<p class="desc">
+				...gave me the first opportunity to develop a consumer facing enterprise application, which tremendously helped me improve fom a junior fron-end to the developer I am today.
+			</p>
+		</div>
+		<div class="company two">
+			<p class="title"><strong>Google</strong></p>
+			<p class="desc">
+				...provided me tools and flexibility to learn a variety of languages and technologies in my path to become a web development ninja.\n\n
+				...also introduced me to the game of ping pong.\n\n...freed food
+				...need I say more?
+			</p>
+		</div>
+		<div class="company three">
+			<p class="title"><strong>Cisco Systems</strong></p>
+			<p class="desc">
+				...provided the first opportunity to develop my very first web application\n\n
+				...really introduced me to to web development and the begininning of my inevitable passion and insatiable hunger to build web applications.
+			</p>
 		</div>
 	</div>
 </div>
