--- a/app/views/home.html
+++ b/app/views/home.html
@@ -22,17 +22,7 @@
         </div>
     </div>
     <hr />
-    <div class="milestones">
-        <p class="milestones-title">Milestones</p>
-        <div class="timeline">
-            <span class="event first">1983</span>
-            <span class="event second">2012</span>
-            <span class="event third">2013</span>
-            <span class="event fourth">2014</span>
-            <span class="event fifth">2015</span>
-        </div>
-        <hr class="line" />
-    </div>
+    <milestones-timeline></milestones-timeline>
     <div class="more-info">
         <div>
             <span>Need some help with your website?</span>
