--- a/app/styles/_about.scss
+++ b/app/styles/_about.scss
@@ -1,3 +1,34 @@
 #about {
-	
+	.title {
+		text-align: center;
+	}
+
+	.facts-list > ol {
+		margin-left: 50%;
+	}
+
+	.facts-list {
+		margin-left: -40%
+	}
+
+	.company {
+		display: inline-block;
+		float: left;
+		width: 30%;
+		height: 400px;
+		border: 1px solid black;
+		text-align: center;
+		padding: 20px;
+		margin-bottom: 80px;
+		background-color: gold;
+	}
+
+	.company:nth-child(2),
+	.company:nth-child(3) {
+		margin-right: 5%;
+	}
+
+	p.title {
+		margin-bottom: 30%;
+	}
 }
