--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -7,16 +7,14 @@
 .background-title,
 .projects-title,
 .projects-button,
-.milestones-title,
 .more-info,
 .background-body {
 	text-align: center;
 }
 
 .background-title,
-.projects-title,
-.milestones-title {
-	font-size: 25px;
+.projects-title {
+	font-size: 24px;
 	margin-bottom: 20px;
 }
 
@@ -52,41 +50,4 @@
 	text-align: center;
 	vertical-align: middle;
 	padding: 120px 5px; 
-}
-
-.milestones {
-	position: relative;
-}
-
-.timeline {
-	margin: 50px 0;
-}
-
-.event {
-	display: inline-block;
-	position: relative;
-	border: 1px solid black;
-	border-radius: 40px;
-	padding: 20px;
-	background-color: #61e8ec;
-	left: 1%;
-}
-
-.event + .first {	// not working
-	left: 1%;
-}
-
-.event + .second,
-.event + .third,
-.event + .fourth,
-.event + .fifth {
-	left: 60%;
-}
-
-hr.line {
-	position: absolute;
-	width: 100%;
-	top: 65%;
-	border-color: black;
-	z-index: -1;
 }
