--- a/app/views/about.html
+++ b/app/views/about.html
@@ -2,24 +2,24 @@
 	<div class="fun-facts">
 		<h3 class="title">Fun Facts</h3>
 		<div class="facts-list">
-			<ol>
-				<li>Seven years after high school, I reunited with my high school sweetheart.</li>
-				<li>Five years later we got married.</li>
-				<li>One year after we had a beautiful daughter.</li>
-				<li>Two years after we have another one coming.</li>
-				<li>I love sports and dancing.</li>
-				<li>I enjoy coffee, beer, and whiskey in no particular order.</li>
-				<li>I love my mom's spaghetti.</li>
-				<li>I didn't know what I wanted to do until 28.</li>
-				<li>I cannot go longer than 2 days without meat.</li>
-				<li>I lvoe to exercise though my body doesn't show that.</li>
-			</ol>
+			<p><strong>1.</strong> Seven years after high school, I reunited with my high school sweetheart.</p>
+			<p><strong>2.</strong> Five years later we got married.</p>
+			<p><strong>3.</strong> One year after we had a beautiful daughter.</p>
+			<p><strong>4.</strong> Two years after we have another one coming.</p>
+			<p><strong>5.</strong> I love sports and dancing.</p>
+			<p><strong>6.</strong> I enjoy coffee, beer, and whiskey in no particular order.</p>
+			<p><strong>7.</strong> I love my mom's spaghetti.</p>
+			<p><strong>8.</strong> I didn't know what I wanted to do until 28.</p>
+			<p><strong>9.</strong> I cannot go longer than 2 days without meat.</p>
+			<p><strong>10.</strong> I lvoe to exercise though my body doesn't show that.</p>
 		</div>
 	</div>
 	<hr />
     <milestones-timeline></milestones-timeline>
 	<div class="career-growth">
 		<h3 class="title">Companies</h3>
+		<span class="left-arrow pointer"></span>
+		<span class="right-arrow pointer"></span>
 		<div class="company one">
 			<p class="title"><strong>GE Software</strong></p>
 			<p class="desc">
