--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,18 @@
 @import '_contact.scss';
 @import '_about.scss';
 
+hr {
+    margin: 60px 0;
+}
+
+.custom-navbar {
+    margin-bottom: 40px;
+}
+
+.footer {
+    margin-top: 80px;
+}
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
