updated font-family and sizes of all texts on site

--- a/app/styles/_contact.scss
+++ b/app/styles/_contact.scss
@@ -1,5 +1,5 @@
-.contact-info > h3,
-.message-form h3 {
+.contact-info > .title,
+.message-form .title {
     margin-bottom: 25px;
 }
 
@@ -9,7 +9,6 @@
 
 .info {
     float: left;
-    font-size: 18px;
 }
 
 .self-image {
