--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,7 +1,7 @@
 <div id="about">
 	<div class="fun-facts">
-		<h3 class="title">Fun Facts</h3>
-		<div class="facts-list">
+		<div class="title">Fun Facts</div>
+		<div class="facts-list desc">
 			<p><strong>1.</strong> Seven years after high school, I reunited with my high school sweetheart.</p>
 			<p><strong>2.</strong> Five years later we got married.</p>
 			<p><strong>3.</strong> One year after we had a beautiful daughter.</p>
@@ -17,17 +17,17 @@
 	<hr />
     <milestones-timeline></milestones-timeline>
 	<div class="career-growth">
-		<h3 class="title">Companies</h3>
+		<div class="title">Companies</div>
 		<span class="left-arrow pointer"></span>
 		<span class="right-arrow pointer"></span>
 		<div class="company one">
-			<p class="title"><strong>GE Software</strong></p>
+			<p class="title">GE Software</p>
 			<p class="desc">
 				...gave me the first opportunity to develop a consumer facing enterprise application, which tremendously helped me improve fom a junior fron-end to the developer I am today.
 			</p>
 		</div>
 		<div class="company two">
-			<p class="title"><strong>Google</strong></p>
+			<p class="title">Google</p>
 			<p class="desc">
 				...provided me tools and flexibility to learn a variety of languages and technologies in my path to become a web development ninja.\n\n
 				...also introduced me to the game of ping pong.\n\n...freed food
@@ -35,7 +35,7 @@
 			</p>
 		</div>
 		<div class="company three">
-			<p class="title"><strong>Cisco Systems</strong></p>
+			<p class="title">Cisco Systems</p>
 			<p class="desc">
 				...provided the first opportunity to develop my very first web application\n\n
 				...really introduced me to to web development and the begininning of my inevitable passion and insatiable hunger to build web applications.
