--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,7 +1,7 @@
 <div id="contact">
     <article class="contact-info">
-        <h3>CONTACT INFORMATION</h3>
-        <div class="info">
+        <div class="title">CONTACT INFORMATION</div>
+        <div class="info desc">
             <p class="name-text">Alouise Quiatchon</p>
             <p class="address">San Jose, CA</p>
             <p class="email-text">alouiseq@gmail.com</p>
@@ -10,8 +10,8 @@
     </article>
     <article class="message-form">
         <hr />
-        <h3 class="title">SEND A MESSAGE</h3>
-        <form class="msg-form" ng-submit="sendMessage()">
+        <div class="title">SEND A MESSAGE</div>
+        <form class="msg-form desc" ng-submit="sendMessage()">
             <label for="name" class="pointer">Name *</label><br />
             <input id="name" class="first name" type="text" placeholder="First Name" required>
             <input class="last name" type="text" placeholder="Last Name" required><br />
