--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,30 +1,30 @@
 <div id="home">
-    <p class="background-title">Background</p>
-    <p class="background-body">
+    <p class="background-title title">Background</p>
+    <p class="background-body desc">
         My passion for web development started at the core, the languages that drive it.
         Now, I find myself fully immersed in the world of development striving to create
         simple and creative applications that can improve our day to day tasks.
     </p>
     <hr />
     <div class="projects-list">
-        <p class="projects-title">Latest Projects</p>
-        <div class="project">
+        <p class="projects-title title">Latest Projects</p>
+        <div class="project desc">
             Website change from Knockout to Angular
         </div>
-        <div class="project">
+        <div class="project desc">
             To Do App from Knockout to Angular
         </div>
-        <div class="project">
+        <div class="project desc">
             Python Game: Space Duel
         </div>
         <div class="projects-button">
-            <span>VIEW MORE PROJECTS</span>
+            <span class="desc">VIEW MORE PROJECTS</span>
         </div>
     </div>
     <hr />
     <milestones-timeline></milestones-timeline>
     <div class="more-info">
-        <div>
+        <div class="desc">
             <span>Need some help with your website?</span>
             <span><a href="">HIRE ME TODAY</a></span>
         </div>
