--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,17 +8,17 @@
     <hr />
     <div class="projects-list">
         <p class="projects-title title">Latest Projects</p>
-        <div class="project desc">
-            Website change from Knockout to Angular
+        <div id="site" class="project desc">
+            Portfolio Website
         </div>
-        <div class="project desc">
-            To Do App from Knockout to Angular
+        <div id="todo" class="project desc">
+            To Do App
         </div>
-        <div class="project desc">
+        <div id="space-duel" class="project desc">
             Python Game: Space Duel
         </div>
         <div class="projects-button">
-            <span class="desc">VIEW MORE PROJECTS</span>
+            <button class="btn desc">VIEW MORE PROJECTS</button>
         </div>
     </div>
     <hr />
