--- a/app/views/milestones.html
+++ b/app/views/milestones.html
@@ -2,7 +2,12 @@
     <p class="milestones-title">Milestones</p>
     <div class="timeline">
         <hr class="line" />
-        <span class="event" ng-repeat="milestone in milestones">{{milestone.year}}</span>
+        <div class="event-time" ng-repeat="milestone in milestones">
+        	<span id="index-{{$index}}" class="event">{{milestone.year}}</span>
+        	<div class="custom-tip">
+        		<div>{{milestone.event}}</div>
+        	</div>
+        </div>
     </div>
     <hr />
 </div>
