--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 // endbower
 
 @import '_home';
+@import '_projects.scss';
 @import '_resume.scss';
 @import '_contact.scss';
 @import '_about.scss';
