--- a/app/styles/milestones.scss
+++ b/app/styles/milestones.scss
@@ -1,6 +1,6 @@
 #milestones {
     position: relative;
-    margin-bottom: 80px;
+    margin-bottom: 185px;
 
     .milestones-title {
         text-align: center;
@@ -24,7 +24,7 @@
 
     .event-time {
         @include bubble; 
-        top: 50%;
+        top: 75%;
         box-shadow: 5px 5px 10px #000;
     }
 
@@ -67,8 +67,13 @@
     hr.line {
         position: absolute;
         width: 100%;
-        top: 28%;
+        top: 50%;
         border-color: black;
         z-index: -1;
     }    
+
+    hr.hr-clear {
+        position: relative;
+        top: 120px;
+    }
 }
