added dynamic titles on each page

--- a/app/partials/resume.html
+++ b/app/partials/resume.html
@@ -54,8 +54,8 @@
 		</div>
 	</div>
 	<div class="more-info pointer">
-        <div>
-            <span class="desc">Download Resume</span>
+        <div class="desc">
+            <a class="resume-button" href="../images/Alouise Quiatchon.docx" download="AlouiseQuiatchon.docx">Download Resume</a>
         </div>
     </div>
 </div> 
