--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -30,13 +30,9 @@
 	.more-info > div {
 		display: inline-block;
 		border: 1px solid black;
-		padding: 5px;
+		padding: 5px 10px;
 		margin: 25px 0 10px 0;
-	}
-
-	.more-info > div {
 		background-color: lightgray;
-		margin-bottom: 25px;
 	}
 
 	.project {
