--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -141,8 +141,24 @@ hr {
 }
 
 .nav-headers {
-    float: right;
+    position: fixed;
+    right: 0;
     margin: 5px 35px 0 0;
+}
+
+.sticky-navbar {
+    transition: all 1s ease-in;
+    position: fixed;
+    width: 100%;
+    height: 65px;
+    top: 0;
+    left: 0;
+    background-color: #2d2d2d;
+    z-index: 999;
+
+    // .nav-title {
+    //     display: none;
+    // }
 }
 
 .navbar-brand {
@@ -152,9 +168,10 @@ hr {
     border: 1px solid black;
     border-radius: 30px;
     background-color: gray;
-    position: relative;
+    position: fixed;
     top: 10px;
     left: 10px;
+    z-index: 9999;
 }
 
 .nav-title {
@@ -177,6 +194,12 @@ hr {
 
 #nav-title1 {
     top: 140px;
+}
+
+.sticky-title {
+    top: -12px !important;
+    position: fixed;
+    z-index: 9999;
 }
 
 #nav-title2 {
@@ -213,6 +236,7 @@ hr {
 
 .footer-brand {
     @extend .navbar-brand;
+    position: relative !important;
     top: 0;
     left: 1px;
     width: 40px;
