--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,7 +30,6 @@ hr {
 }
 
 @mixin custom-navbar($image) {
-    margin-bottom: 40px;
     height: 430px;
     background-image:  
         linear-gradient(
@@ -127,7 +126,7 @@ hr {
     }
     /* Space out the masthead */
     .header {
-        margin-bottom: 30px;
+        margin-bottom: 70px;
     }
 }
 
@@ -155,10 +154,6 @@ hr {
     left: 0;
     background-color: #2d2d2d;
     z-index: 999;
-
-    // .nav-title {
-    //     display: none;
-    // }
 }
 
 .navbar-brand {
@@ -174,32 +169,23 @@ hr {
     z-index: 9999;
 }
 
+#titles {
+    opacity: 0;
+}
+
+.titles-animate {
+    transition: opacity 1s ease-in;
+    opacity: 1 !important;
+}
+
 .nav-title {
     color: #fff;
     position: absolute;
     margin-left: 50%; 
 }
 
-// @media screen and (max-width: 1030px) {
-//     .nav-title {
-//         left: 35%;
-//     }
-// }
-
-// @media screen and (max-width: 820px) {
-//     .nav-title {
-//         left: 30%;
-//     }
-// }
-
 #nav-title1 {
     top: 140px;
-}
-
-.sticky-title {
-    top: -12px !important;
-    position: fixed;
-    z-index: 9999;
 }
 
 #nav-title2 {
@@ -210,6 +196,18 @@ hr {
 .nav-title > h2,
 .nav-title > h3 {
     margin-left: -50%;
+}
+
+.sticky-title1 {
+    top: -12px !important;
+    position: fixed;
+    z-index: 9999;
+}
+
+.sticky-title2 {
+    top: 55px !important;
+    position: fixed;
+    z-index: 9999;
 }
 
 .navbar-toggle {
